--- a/design.css
+++ b/design.css
@@ -193,7 +193,7 @@ button:active{
 	font-size:14px;
 	font-weight:bold;
 }
-
+24
 
 @media(max-width:1000px){
 	*{
@@ -316,3 +316,4 @@ button:active{
 	}
 	
 }
+
