--- a/design.css
+++ b/design.css
@@ -106,12 +106,14 @@ nav ul li a{
 	border:2px solid #ffffff;
 	color:#ffffff;
 	background-color:transparent;
+    margin: 10px;
 	
 }
 .down-cv{
 	background-color:#ffffff;
 	color:#000000;	
 	border:none;
+     margin: 10px;
 }
 button:active{
 	transform:scale(1.1);
@@ -265,7 +267,11 @@ button:active{
 	.model{
 		display: none;
 	}
-
+    .text-container{
+        position: absolute;
+        left:13%;
+        transform:translate(-3%,-22%);
+    }
 	.text-container p:nth-child(2){
 		line-height: 40px;
 		margin: 0px;
@@ -273,9 +279,9 @@ button:active{
 		
 	}
 	.text-container{
-		top: 50%;
+		top: 20%;
 		left: 50%;
-		transform: translate(-50%,-50%);
+		transform: translate(-50%,-20%);
 		width: 80%;
 	}
 	nav ul li{
